--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>chickenRace</h1>
 
     <script src="background.js"></script>
+    <script src="obstacles.js"></script>
     <script src="player.js"></script>
     <script src="game.js"></script>
     <script src="main.js"></script>
