add chicken gif and correct position, obstacles of worms and foxes instead of red squares, put the canvas in the middle of the screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <h1>chickenRace</h1>
+    <h2>score: <span>0</span></h2>
+    <h2>life: <span>3</span></h2>
 
     <script src="background.js"></script>
     <script src="obstacles.js"></script>
