--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chickenRace</title>
+    <title>chickenRaceGame</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- https://p5js.org/get-started/ -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
