centering the starting, game and game over screens

--- a/gameover.html
+++ b/gameover.html
@@ -21,7 +21,7 @@
         <p>
           Your score is: <span>10</span> point(s).
           <br />
-          Hit <span>enter</span> to play again
+          Hit <span id="enter">ENTER</span> to play again
         </p>
       </div>
     </main>
