--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
     <main class="mainFlex">
       <div class="picture">
         <img
-          src="./assets/worm/worm.png"
+          src="./assets/start/startpage_2.png"
           alt="a photo of a chicken and a fox"
         />
       </div>
@@ -20,11 +20,12 @@
         <p>
           Catch the <span>worms</span> and try to avoid the
           <span>foxes</span> with your chicken. <br />
-          You receive scores for cathing the worms and looses lifes for
-          colliding with the foxes. <br />
-          Hit <span>space</span> once to jump, or twice to jump even higher.
+          <!-- You receive scores for cathing the worms and looses lifes for
+          colliding with the foxes. <br /> -->
+          Hit <span id="space">SPACE</span> once to jump, or hit it twice to
+          jump even higher.
           <br />
-          Hit <span>enter</span> to start the game and have fun! =)
+          Hit <span id="enter">ENTER</span> to start the game and have fun! =)
         </p>
       </div>
     </main>
