--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
 
   <body>
-    <h1>chickenRace</h1>
-    <h2>score: <span>0</span></h2>
-    <h2>life: <span>3</span></h2>
+    <div class="text">
+      <h1>chickenRace</h1>
+      <h2>score: <span>0</span></h2>
+      <h2>life: <span>3</span></h2>
+    </div>
 
     <script src="background.js"></script>
     <script src="obstacles.js"></script>
