one css for all three html documents

--- a/gameover.html
+++ b/gameover.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chickenRaceGameOver</title>
-    <link rel="stylesheet" href="gameover.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <main class="mainFlex">
-      <div class="picture">
-        <img
-          src="./assets/gameover/fox_stole_chicken.png"
-          alt="a photo of a chicken and a fox"
-        />
-      </div>
+  <body class="mainFlex">
+    <div class="text">
+      <h2>chickenRace</h2>
+      <h1>GAME OVER</h1>
+      <p>
+        Your score is: <span>10</span> point(s).
+        <br />
+        Hit <span id="enter">ENTER</span> to play again
+      </p>
+    </div>
 
-      <div class="text">
-        <h2>chickenRace</h2>
-        <h1>GAME OVER</h1>
-        <p>
-          Your score is: <span>10</span> point(s).
-          <br />
-          Hit <span id="enter">ENTER</span> to play again
-        </p>
-      </div>
-    </main>
+    <div class="picture">
+      <img
+        src="./assets/gameover/fox_stole_chicken.png"
+        alt="a photo of a chicken and a fox"
+      />
+    </div>
   </body>
 </html>
