--- a/start.html
+++ b/start.html
@@ -4,30 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chickenRaceStart</title>
-    <link rel="stylesheet" href="start.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <main class="mainFlex">
-      <div class="picture">
-        <img
-          src="./assets/start/startpage_2.png"
-          alt="a photo of a chicken and a fox"
-        />
-      </div>
-
-      <div class="text">
-        <h1>chickenRace</h1>
-        <p>
-          Catch the <span>worms</span> and try to avoid the
-          <span>foxes</span> with your chicken. <br />
-          <!-- You receive scores for cathing the worms and looses lifes for
+  <body class="mainFlex">
+    <div class="text">
+      <h1>chickenRace</h1>
+      <p>
+        Catch the <span>worms</span> and try to avoid the
+        <span>foxes</span> with your chicken. <br />
+        <!-- You receive scores for cathing the worms and looses lifes for
           colliding with the foxes. <br /> -->
-          Hit <span id="space">SPACE</span> once to jump, or hit it twice to
-          jump even higher.
-          <br />
-          Hit <span id="enter">ENTER</span> to start the game and have fun! =)
-        </p>
-      </div>
-    </main>
+        Hit <span id="space">SPACE</span> once to jump, or hit it twice to jump
+        even higher.
+        <br />
+        Hit <span id="enter">ENTER</span> to start the game and have fun! =)
+      </p>
+    </div>
+
+    <div class="picture">
+      <img
+        src="./assets/start/startpage_2.png"
+        alt="a photo of a chicken and a fox"
+      />
+    </div>
   </body>
 </html>
