--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chickenRaceGame</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- https://p5js.org/get-started/ -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   </head>
 
-  <body>
+  <body class="mainFlex">
     <div class="text">
       <h1>chickenRace</h1>
       <h2>score: <span>0</span></h2>
