add score and life (not ready) + dom manipulation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <body class="mainFlex">
     <div class="text">
       <h1>chickenRace</h1>
-      <h2>score: <span>0</span></h2>
-      <h2>life: <span>3</span></h2>
+      <h2>score: <span id="score">0</span></h2>
+      <h2>life: <span id="life">3</span></h2>
     </div>
-
+    <!-- <div>Start</div>
+    <div>End</div> -->
     <script src="background.js"></script>
     <script src="obstacles.js"></script>
     <script src="player.js"></script>
