--- a/start.html
+++ b/start.html
@@ -11,12 +11,16 @@
       <h1>chickenRace</h1>
       <p>
         Catch the <span>worms</span> and try to avoid the
-        <span>foxes</span> with your chicken. <br />
-        <!-- You receive scores for cathing the worms and looses lifes for
-          colliding with the foxes. <br /> -->
+        <span>foxes</span> with your chicken.
+      </p>
+      <!-- You receive scores for cathing the worms and looses lifes for
+          colliding with the foxes. -->
+      <p>
         Hit <span id="space">SPACE</span> once to jump, or hit it twice to jump
         even higher.
-        <br />
+      </p>
+
+      <p>
         Hit <span id="enter">ENTER</span> to start the game and have fun! =)
       </p>
     </div>
