life, score and jump only 2x

--- a/gameover.html
+++ b/gameover.html
@@ -10,11 +10,8 @@
     <div class="text">
       <h2>chickenRace</h2>
       <h1>GAME OVER</h1>
-      <p>
-        Your score is: <span>10</span> point(s).
-        <br />
-        Hit <span id="enter">ENTER</span> to play again
-      </p>
+      <p>Your score is: <span id="score">10</span> point(s)</p>
+      <p>Hit <span id="enter">ENTER</span> to play again</p>
     </div>
 
     <div class="picture">
