cleaning the structure of the files and the file names

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
     <!-- <div>Start</div>
     <div>End</div> -->
-    <script src="background.js"></script>
-    <script src="obstacles.js"></script>
-    <script src="player.js"></script>
-    <script src="game.js"></script>
-    <script src="main.js"></script>
+    <script src="javaScript/background.js"></script>
+    <script src="javaScript/obstacles.js"></script>
+    <script src="javaScript/player.js"></script>
+    <script src="javaScript/game.js"></script>
+    <script src="javaScript/main.js"></script>
   </body>
 </html>
