--- a/not_used_html/gameover.html
+++ b/not_used_html/gameover.html
@@ -16,7 +16,7 @@
 
     <div class="picture">
       <img
-        src="./assets/gameover/fox_stole_chicken.png"
+        src="assets/gameover/fox_stole_chicken.png"
         alt="a photo of a chicken and a fox"
       />
     </div>
