--- a/not_used_html/start.html
+++ b/not_used_html/start.html
@@ -19,15 +19,17 @@
         Hit <span id="space">SPACE</span> once to jump, or hit it twice to jump
         even higher.
       </p>
-
       <p>
         Hit <span id="enter">ENTER</span> to start the game and have fun! =)
+      </p>
+      <p class="smallFont">
+        (This game is dedicated to my friend, Gábor Kiszel.)
       </p>
     </div>
 
     <div class="picture">
       <img
-        src="./assets/start/startpage_2.png"
+        src="assets/start/startpage_2.png"
         alt="a photo of a chicken and a fox"
       />
     </div>
