--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <!-- https://p5js.org/get-started/ -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <!-- https://p5js.org/download/ -->
+    <script src="assets/p5/addons/p5.sound.js"></script>
   </head>
 
   <body class="mainFlex">
